--- a/notebooks/quantum_ops_performance_demo.ipynb
+++ b/notebooks/quantum_ops_performance_demo.ipynb
@@ -158,7 +158,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  1.467 ns (0 allocations: 0 bytes)\n"
+      "  1.816 ns (0 allocations: 0 bytes)\n"
      ]
     }
    ],
@@ -176,7 +176,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.978 ns (0 allocations: 0 bytes)\n"
+      "  1.396 ns (0 allocations: 0 bytes)\n"
      ]
     }
    ],
@@ -208,7 +208,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  30.706 ns (1 allocation: 128 bytes)\n"
+      "  31.198 ns (1 allocation: 128 bytes)\n"
      ]
     }
    ],
@@ -227,7 +227,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  167.162 ns (1 allocation: 128 bytes)\n"
+      "  172.128 ns (1 allocation: 128 bytes)\n"
      ]
     }
    ],
@@ -251,7 +251,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  19.265 ns (1 allocation: 80 bytes)\n"
+      "  20.246 ns (1 allocation: 80 bytes)\n"
      ]
     },
     {
@@ -316,13 +316,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  48.686 ns (1 allocation: 80 bytes)\n"
+      "  52.134 ns (1 allocation: 80 bytes)\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Complex{Int64}}:\nZIIZIYZZII * (0 - 1im)"
+      "text/plain": "10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Complex{Int64}}:\nXZZZIZYYZZ * (0 + 1im)"
      },
      "metadata": {},
      "execution_count": 12
@@ -353,13 +353,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  17.042 μs (4 allocations: 256 bytes)\n"
+      "  17.252 μs (4 allocations: 256 bytes)\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "PyObject Pauli('ZZIYIZZXXI')"
+      "text/plain": "PyObject Pauli('iYIYIXXYZXX')"
      },
      "metadata": {},
      "execution_count": 13
@@ -385,7 +385,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "338.35405295315684"
+      "text/plain": "324.39072582184724"
      },
      "metadata": {},
      "execution_count": 14
@@ -413,7 +413,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "9.896593340281967"
+      "text/plain": "9.441028688746014"
      },
      "metadata": {},
      "execution_count": 15
@@ -444,7 +444,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "1.816721145435293"
+      "text/plain": "1.899050282022851"
      },
      "metadata": {},
      "execution_count": 16
@@ -482,7 +482,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "10x10 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{Float64}}:\nIXYXXXXXIY * 0.07661728906998562\nIZIXYZIXIX * -1.052392815983234\nIZYIIZZIZI * -0.46285888670999187\nYIIYZIYXXY * -1.3648851461793008\nYYIZXYYIIY * -0.789634375651957\nYZYXYIXXZY * 0.5659266927269863\nZIIXZXYXZX * -2.011571590977089\nZYXXZIZIII * -0.5990698209583774\nZZIZYXZYZZ * 0.9627293335635448\nZZXZZZYZXY * -0.9198270974851278"
+      "text/plain": "10x10 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{Float64}}:\nIYXYYXZXYX * -0.7890563916698188\nXIYXIYYYII * -0.9294764076696893\nXXIIYZXYXY * -0.08824015446563147\nXXIYZYYZYY * -1.5588206852552104\nXZYYYIZZYY * 0.8924015661563452\nYXZXZXZXYX * -0.4879181689841041\nYYIYZIXYZZ * -0.7020430331483353\nYZXIIIXIZX * 0.17147634069109988\nZXXXIZZZZY * -0.9572070388205663\nZZIYIXIYII * 0.772433811012608"
      },
      "metadata": {},
      "execution_count": 17
@@ -502,7 +502,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "(10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64}:\nYYIZXYYIIY * -0.789634375651957, QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64})"
+      "text/plain": "(10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64}:\nXZYYYIZZYY * 0.8924015661563452, QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64})"
      },
      "metadata": {},
      "execution_count": 18
@@ -528,7 +528,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "9x10 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{Float64}}:\nIXYXXXXXIY * 0.07661728906998562\nIZIXYZIXIX * -1.052392815983234\nIZYIIZZIZI * -0.46285888670999187\nYIIYZIYXXY * -1.3648851461793008\nYZYXYIXXZY * 0.5659266927269863\nZIIXZXYXZX * -2.011571590977089\nZYXXZIZIII * -0.5990698209583774\nZZIZYXZYZZ * 0.9627293335635448\nZZXZZZYZXY * -0.9198270974851278"
+      "text/plain": "9x10 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{Float64}}:\nIYXYYXZXYX * -0.7890563916698188\nXIYXIYYYII * -0.9294764076696893\nXXIIYZXYXY * -0.08824015446563147\nXXIYZYYZYY * -1.5588206852552104\nYXZXZXZXYX * -0.4879181689841041\nYYIYZIXYZZ * -0.7020430331483353\nYZXIIIXIZX * 0.17147634069109988\nZXXXIZZZZY * -0.9572070388205663\nZZIYIXIYII * 0.772433811012608"
      },
      "metadata": {},
      "execution_count": 19
@@ -592,7 +592,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64}:\nIIZXYZXIYI * -1.4948916076441654"
+      "text/plain": "10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64}:\nIYZZXZZIZX * 0.5726383937842291"
      },
      "metadata": {},
      "execution_count": 22
@@ -611,7 +611,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  63.351 ns (0 allocations: 0 bytes)\n"
+      "  56.828 ns (0 allocations: 0 bytes)\n"
      ]
     }
    ],
@@ -632,6 +632,61 @@
   {
    "cell_type": "markdown",
    "source": [
+    "Multiplying Pauli Sums. Compare with Qiskit"
+   ],
+   "metadata": {}
+  },
+  {
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "get_julia_python_sums (generic function with 1 method)"
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
+   "cell_type": "code",
+   "source": [
+    "function get_julia_python_sums(n_qubits, n_terms)\n",
+    "    xj = rand_op_sum(Pauli, n_qubits, n_terms)\n",
+    "    yj = rand_op_sum(Pauli, n_qubits, n_terms)\n",
+    "    xp = qi.SparsePauliOp(qi.random_pauli_list(n_qubits, n_terms))\n",
+    "    yp = qi.SparsePauliOp(qi.random_pauli_list(n_qubits, n_terms))\n",
+    "    return (xj, yj, xp, yp)\n",
+    "end"
+   ],
+   "metadata": {},
+   "execution_count": 24
+  },
+  {
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "0.37993166954125124"
+     },
+     "metadata": {},
+     "execution_count": 25
+    }
+   ],
+   "cell_type": "code",
+   "source": [
+    "n_qubits = 10; n_terms = 100\n",
+    "\n",
+    "(xj, yj, xp, yp) = get_julia_python_sums(n_qubits, n_terms)\n",
+    "julia_time = @belapsed $xj * $xj\n",
+    "qiskit_time = @belapsed $xp.compose($yp)\n",
+    "\n",
+    "qiskit_time / julia_time"
+   ],
+   "metadata": {},
+   "execution_count": 25
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "#### Pauli decomposition\n",
     "\n",
     "Construct the Pauli decomposition of a matrix."
@@ -643,10 +698,10 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "16x2 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{ComplexF64}}:\nII * (0.6098381047006239 + 0.0im)\nIX * (0.6250475912747843 + 0.0im)\nIY * (0.0 + 0.09895093323554521im)\nIZ * (0.16735056406884438 + 0.0im)\nXI * (0.33470076088113704 + 0.0im)\nXX * (0.5942269038131622 + 0.0im)\nXY * (0.0 - 0.05442648720930485im)\nXZ * (0.26332863591614697 + 0.0im)\nYI * (0.0 - 0.14961168266267633im)\nYX * (0.0 + 0.11553941613966254im)\nYY * (-0.06618554137476332 - 0.0im)\nYZ * (0.0 - 0.20663812569246615im)\nZI * (0.012307292591823893 + 0.0im)\nZX * (-0.12555658352121712 + 0.0im)\nZY * (0.0 + 0.043623963145295375im)\nZZ * (0.1474370199923803 + 0.0im)"
+      "text/plain": "16x2 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{ComplexF64}}:\nII * (0.4400937880748499 + 0.0im)\nIX * (0.3992930553563667 + 0.0im)\nIY * (0.0 + 0.028154888263062394im)\nIZ * (0.1435929884762503 + 0.0im)\nXI * (0.6444740283744304 + 0.0im)\nXX * (0.6084277894956611 + 0.0im)\nXY * (0.0 + 0.08352265712990495im)\nXZ * (0.07305389769568146 + 0.0im)\nYI * (0.0 + 0.06619468977071183im)\nYX * (0.0 - 0.10488866605191027im)\nYY * (0.17155774260054096 - 0.0im)\nYZ * (0.0 - 0.23854745459105056im)\nZI * (0.08788089814342753 + 0.0im)\nZX * (0.025165089620972247 + 0.0im)\nZY * (0.0 + 0.3946254191445371im)\nZZ * (-0.07156041498587723 + 0.0im)"
      },
      "metadata": {},
-     "execution_count": 24
+     "execution_count": 26
     }
    ],
    "cell_type": "code",
@@ -655,7 +710,7 @@
     "s = PauliSum(m)"
    ],
    "metadata": {},
-   "execution_count": 24
+   "execution_count": 26
   },
   {
    "cell_type": "markdown",
@@ -672,7 +727,7 @@
       "text/plain": "true"
      },
      "metadata": {},
-     "execution_count": 25
+     "execution_count": 27
     }
    ],
    "cell_type": "code",
@@ -680,7 +735,7 @@
     "m ≈ Matrix(s)"
    ],
    "metadata": {},
-   "execution_count": 25
+   "execution_count": 27
   },
   {
    "cell_type": "markdown",
@@ -694,10 +749,10 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "0.083343556"
+      "text/plain": "0.082307376"
      },
      "metadata": {},
-     "execution_count": 26
+     "execution_count": 28
     }
    ],
    "cell_type": "code",
@@ -707,17 +762,26 @@
     "julia_time = @belapsed PauliSum($m)"
    ],
    "metadata": {},
-   "execution_count": 26
+   "execution_count": 28
   },
   {
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┌ Warning: `vendor()` is deprecated, use `BLAS.get_config()` and inspect the output instead\n",
+      "│   caller = npyinitialize() at numpy.jl:67\n",
+      "└ @ PyCall ~/.julia/packages/PyCall/3fwVL/src/numpy.jl:67\n"
+     ]
+    },
+    {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "8.54168941"
+      "text/plain": "8.954068324"
      },
      "metadata": {},
-     "execution_count": 27
+     "execution_count": 29
     }
    ],
    "cell_type": "code",
@@ -726,7 +790,7 @@
     "qi_time = @elapsed qi.SparsePauliOp.from_operator(qi_op)"
    ],
    "metadata": {},
-   "execution_count": 27
+   "execution_count": 29
   },
   {
    "cell_type": "markdown",
@@ -740,10 +804,10 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "102.48770054879827"
+      "text/plain": "108.78816406442114"
      },
      "metadata": {},
-     "execution_count": 28
+     "execution_count": 30
     }
    ],
    "cell_type": "code",
@@ -751,7 +815,7 @@
     "qi_time / julia_time"
    ],
    "metadata": {},
-   "execution_count": 28
+   "execution_count": 30
   },
   {
    "cell_type": "markdown",
@@ -777,7 +841,7 @@
       "text/plain": "(+i XXY, QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, QuantumOps.Z4Groups.Z4Group})"
      },
      "metadata": {},
-     "execution_count": 29
+     "execution_count": 31
     }
    ],
    "cell_type": "code",
@@ -786,7 +850,7 @@
     "(t, typeof(t))"
    ],
    "metadata": {},
-   "execution_count": 29
+   "execution_count": 31
   },
   {
    "outputs": [
@@ -796,7 +860,7 @@
       "text/plain": "+1 ZXZ"
      },
      "metadata": {},
-     "execution_count": 30
+     "execution_count": 32
     }
    ],
    "cell_type": "code",
@@ -804,7 +868,7 @@
     "v = PauliTerm(:ZXZ, Z4Group(1))"
    ],
    "metadata": {},
-   "execution_count": 30
+   "execution_count": 32
   },
   {
    "outputs": [
@@ -814,7 +878,7 @@
       "text/plain": "+i YIX"
      },
      "metadata": {},
-     "execution_count": 31
+     "execution_count": 33
     }
    ],
    "cell_type": "code",
@@ -822,7 +886,7 @@
     "t * v"
    ],
    "metadata": {},
-   "execution_count": 31
+   "execution_count": 33
   },
   {
    "cell_type": "markdown",
@@ -852,7 +916,7 @@
     "dump(Z4Group0(1))"
    ],
    "metadata": {},
-   "execution_count": 32
+   "execution_count": 34
   },
   {
    "cell_type": "markdown",
@@ -866,10 +930,10 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "3×5 Matrix{QuantumOps.Z4Group0s.Z4Group0}:\n 0   0   0   -i  -1\n -1  +i  +i  +i  +1\n +1  -1  -i  +i  -i"
+      "text/plain": "3×5 Matrix{QuantumOps.Z4Group0s.Z4Group0}:\n -i  0   +1  -i  -i\n +1  -i  0   0   +1\n +1  -i  -i  +i  0"
      },
      "metadata": {},
-     "execution_count": 33
+     "execution_count": 35
     }
    ],
    "cell_type": "code",
@@ -878,7 +942,7 @@
     "a"
    ],
    "metadata": {},
-   "execution_count": 33
+   "execution_count": 35
   },
   {
    "outputs": [
@@ -888,7 +952,7 @@
       "text/plain": "45"
      },
      "metadata": {},
-     "execution_count": 34
+     "execution_count": 36
     }
    ],
    "cell_type": "code",
@@ -896,7 +960,7 @@
     "sizeof(a)  ## (3 x 5) x 3 bytes"
    ],
    "metadata": {},
-   "execution_count": 34
+   "execution_count": 36
   },
   {
    "cell_type": "markdown",
@@ -911,7 +975,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  63.906 μs (1 allocation: 16 bytes)\n"
+      "  64.256 μs (1 allocation: 16 bytes)\n"
      ]
     },
     {
@@ -920,7 +984,7 @@
       "text/plain": "0"
      },
      "metadata": {},
-     "execution_count": 35
+     "execution_count": 37
     }
    ],
    "cell_type": "code",
@@ -929,7 +993,7 @@
     "@btime reduce(*, a)"
    ],
    "metadata": {},
-   "execution_count": 35
+   "execution_count": 37
   },
   {
    "outputs": [
@@ -937,7 +1001,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  132.493 μs (1 allocation: 32 bytes)\n"
+      "  132.633 μs (1 allocation: 32 bytes)\n"
      ]
     },
     {
@@ -946,7 +1010,7 @@
       "text/plain": "0 + 0im"
      },
      "metadata": {},
-     "execution_count": 36
+     "execution_count": 38
     }
    ],
    "cell_type": "code",
@@ -955,7 +1019,7 @@
     "@btime reduce(*, anum)"
    ],
    "metadata": {},
-   "execution_count": 36
+   "execution_count": 38
   },
   {
    "cell_type": "markdown",
@@ -972,51 +1036,12 @@
       "text/plain": "8×8 Matrix{QuantumOps.Z4Group0s.Z4Group0}:\n 0   0   0   0   0   0   -i  0\n 0   0   0   0   0   0   0   +i\n 0   0   0   0   +i  0   0   0\n 0   0   0   0   0   -i  0   0\n 0   0   -i  0   0   0   0   0\n 0   0   0   +i  0   0   0   0\n +i  0   0   0   0   0   0   0\n 0   -i  0   0   0   0   0   0"
      },
      "metadata": {},
-     "execution_count": 37
-    }
-   ],
-   "cell_type": "code",
-   "source": [
-    "kron([Z4Group0.(m) for m in Matrix.([X, Y, Z])]...)"
-   ],
-   "metadata": {},
-   "execution_count": 37
-  },
-  {
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "IXZI"
-     ]
-    }
-   ],
-   "cell_type": "code",
-   "source": [
-    "operators = rand(Pauli, 4)\n",
-    "print(operators)"
-   ],
-   "metadata": {},
-   "execution_count": 38
-  },
-  {
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "(16, 16)"
-     },
-     "metadata": {},
      "execution_count": 39
     }
    ],
    "cell_type": "code",
    "source": [
-    "mats = Matrix.(operators)\n",
-    "z40mats = [Z4Group0.(m) for m in mats];\n",
-    "\n",
-    "size(kron(mats...))"
+    "kron([Z4Group0.(m) for m in Matrix.([X, Y, Z])]...)"
    ],
    "metadata": {},
    "execution_count": 39
@@ -1027,7 +1052,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  663.289 ns (3 allocations: 2.88 KiB)\n"
+      "ZZZI"
+     ]
+    }
+   ],
+   "cell_type": "code",
+   "source": [
+    "operators = rand(Pauli, 4)\n",
+    "print(operators)"
+   ],
+   "metadata": {},
+   "execution_count": 40
+  },
+  {
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "(16, 16)"
+     },
+     "metadata": {},
+     "execution_count": 41
+    }
+   ],
+   "cell_type": "code",
+   "source": [
+    "mats = Matrix.(operators)\n",
+    "z40mats = [Z4Group0.(m) for m in mats];\n",
+    "\n",
+    "size(kron(mats...))"
+   ],
+   "metadata": {},
+   "execution_count": 41
+  },
+  {
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  628.182 ns (3 allocations: 2.88 KiB)\n"
      ]
     }
    ],
@@ -1036,7 +1100,7 @@
     "@btime kron($mats...);"
    ],
    "metadata": {},
-   "execution_count": 40
+   "execution_count": 42
   },
   {
    "outputs": [
@@ -1044,7 +1108,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  666.805 ns (3 allocations: 1.12 KiB)\n"
+      "  691.899 ns (3 allocations: 1.12 KiB)\n"
      ]
     }
    ],
@@ -1053,7 +1117,7 @@
     "@btime kron($z40mats...);"
    ],
    "metadata": {},
-   "execution_count": 41
+   "execution_count": 43
   },
   {
    "cell_type": "markdown",
@@ -1077,7 +1141,7 @@
       "text/plain": "(PyObject x, PyObject t)"
      },
      "metadata": {},
-     "execution_count": 42
+     "execution_count": 44
     }
    ],
    "cell_type": "code",
@@ -1086,7 +1150,7 @@
     "(x, t) = sympy.symbols(\"x t\")"
    ],
    "metadata": {},
-   "execution_count": 42
+   "execution_count": 44
   },
   {
    "cell_type": "markdown",
@@ -1100,10 +1164,10 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "4-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, PyCall.PyObject}:\nXXYZ * (PyObject t + x)"
+      "text/plain": "4-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, PyObject}:\nXXYZ * (PyObject t + x)"
      },
      "metadata": {},
-     "execution_count": 43
+     "execution_count": 45
     }
    ],
    "cell_type": "code",
@@ -1111,17 +1175,17 @@
     "term = PauliTerm(\"XXYZ\", x + t)"
    ],
    "metadata": {},
-   "execution_count": 43
+   "execution_count": 45
   },
   {
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "4-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, PyCall.PyObject}:\nXXYZ * (PyObject (t + x)**3)"
+      "text/plain": "4-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, PyObject}:\nXXYZ * (PyObject (t + x)**3)"
      },
      "metadata": {},
-     "execution_count": 44
+     "execution_count": 46
     }
    ],
    "cell_type": "code",
@@ -1129,7 +1193,7 @@
     "term^3"
    ],
    "metadata": {},
-   "execution_count": 44
+   "execution_count": 46
   },
   {
    "cell_type": "markdown",
@@ -1143,10 +1207,10 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "PauliTerm{Vector{Pauli}, PyObject} (alias for QuantumOps.OpTerm{QuantumOps.Paulis.Pauli, Array{QuantumOps.Paulis.Pauli, 1}, PyCall.PyObject})"
+      "text/plain": "PauliTerm{Vector{Pauli}, PyObject} (alias for QuantumOps.OpTerm{QuantumOps.Paulis.Pauli, Array{QuantumOps.Paulis.Pauli, 1}, PyObject})"
      },
      "metadata": {},
-     "execution_count": 45
+     "execution_count": 47
     }
    ],
    "cell_type": "code",
@@ -1154,7 +1218,7 @@
     "typeof(term)"
    ],
    "metadata": {},
-   "execution_count": 45
+   "execution_count": 47
   },
   {
    "cell_type": "markdown",
