--- a/notebooks/quantum_ops_performance_demo.ipynb
+++ b/notebooks/quantum_ops_performance_demo.ipynb
@@ -158,7 +158,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  1.816 ns (0 allocations: 0 bytes)\n"
+      "  1.815 ns (0 allocations: 0 bytes)\n"
      ]
     }
    ],
@@ -176,7 +176,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  1.396 ns (0 allocations: 0 bytes)\n"
+      "  0.977 ns (0 allocations: 0 bytes)\n"
      ]
     }
    ],
@@ -208,7 +208,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  31.198 ns (1 allocation: 128 bytes)\n"
+      "  30.705 ns (1 allocation: 128 bytes)\n"
      ]
     }
    ],
@@ -227,7 +227,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  172.128 ns (1 allocation: 128 bytes)\n"
+      "  167.752 ns (1 allocation: 128 bytes)\n"
      ]
     }
    ],
@@ -251,7 +251,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  20.246 ns (1 allocation: 80 bytes)\n"
+      "  19.615 ns (1 allocation: 80 bytes)\n"
      ]
     },
     {
@@ -316,13 +316,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  52.134 ns (1 allocation: 80 bytes)\n"
+      "  44.208 ns (1 allocation: 80 bytes)\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Complex{Int64}}:\nXZZZIZYYZZ * (0 + 1im)"
+      "text/plain": "10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Complex{Int64}}:\nIZYIYXYYZY * (0 - 1im)"
      },
      "metadata": {},
      "execution_count": 12
@@ -353,13 +353,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  17.252 μs (4 allocations: 256 bytes)\n"
+      "  16.763 μs (4 allocations: 256 bytes)\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "PyObject Pauli('iYIYIXXYZXX')"
+      "text/plain": "PyObject Pauli('-iXIXYIYYZIX')"
      },
      "metadata": {},
      "execution_count": 13
@@ -385,7 +385,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "324.39072582184724"
+      "text/plain": "332.7671894803549"
      },
      "metadata": {},
      "execution_count": 14
@@ -413,7 +413,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "9.441028688746014"
+      "text/plain": "10.03516704345642"
      },
      "metadata": {},
      "execution_count": 15
@@ -444,7 +444,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "1.899050282022851"
+      "text/plain": "1.906648212666444"
      },
      "metadata": {},
      "execution_count": 16
@@ -482,7 +482,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "10x10 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{Float64}}:\nIYXYYXZXYX * -0.7890563916698188\nXIYXIYYYII * -0.9294764076696893\nXXIIYZXYXY * -0.08824015446563147\nXXIYZYYZYY * -1.5588206852552104\nXZYYYIZZYY * 0.8924015661563452\nYXZXZXZXYX * -0.4879181689841041\nYYIYZIXYZZ * -0.7020430331483353\nYZXIIIXIZX * 0.17147634069109988\nZXXXIZZZZY * -0.9572070388205663\nZZIYIXIYII * 0.772433811012608"
+      "text/plain": "10x10 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{Float64}}:\nIIZYZYYIZI * 1.5254663812180342\nIXXIZXYIZI * 0.4286680995053579\nIXZIYZZIZX * -0.34347870392147345\nXIYXIYZYZZ * -0.6634850219738598\nXXXXXZIZIZ * 0.19516859159317054\nYXXXXIXXXZ * -0.9239711330827733\nYXYYXIYIZX * 0.9194225727736794\nYYIYZIXXIY * -0.852316077397016\nYYZZZXZYZX * 2.5773315767877314\nYZIZYXYZZZ * -0.0571125686419795"
      },
      "metadata": {},
      "execution_count": 17
@@ -502,7 +502,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "(10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64}:\nXZYYYIZZYY * 0.8924015661563452, QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64})"
+      "text/plain": "(10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64}:\nXXXXXZIZIZ * 0.19516859159317054, QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64})"
      },
      "metadata": {},
      "execution_count": 18
@@ -528,7 +528,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "9x10 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{Float64}}:\nIYXYYXZXYX * -0.7890563916698188\nXIYXIYYYII * -0.9294764076696893\nXXIIYZXYXY * -0.08824015446563147\nXXIYZYYZYY * -1.5588206852552104\nYXZXZXZXYX * -0.4879181689841041\nYYIYZIXYZZ * -0.7020430331483353\nYZXIIIXIZX * 0.17147634069109988\nZXXXIZZZZY * -0.9572070388205663\nZZIYIXIYII * 0.772433811012608"
+      "text/plain": "9x10 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{Float64}}:\nIIZYZYYIZI * 1.5254663812180342\nIXXIZXYIZI * 0.4286680995053579\nIXZIYZZIZX * -0.34347870392147345\nXIYXIYZYZZ * -0.6634850219738598\nYXXXXIXXXZ * -0.9239711330827733\nYXYYXIYIZX * 0.9194225727736794\nYYIYZIXXIY * -0.852316077397016\nYYZZZXZYZX * 2.5773315767877314\nYZIZYXYZZZ * -0.0571125686419795"
      },
      "metadata": {},
      "execution_count": 19
@@ -592,7 +592,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64}:\nIYZZXZZIZX * 0.5726383937842291"
+      "text/plain": "10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64}:\nIIXYZIYZZY * 0.17270848040900558"
      },
      "metadata": {},
      "execution_count": 22
@@ -611,7 +611,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  56.828 ns (0 allocations: 0 bytes)\n"
+      "  60.579 ns (0 allocations: 0 bytes)\n"
      ]
     }
    ],
@@ -632,7 +632,14 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Multiplying Pauli Sums. Compare with Qiskit"
+    "### Multiplying Pauli Sums. Compare with Qiskit"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "`qiskit.quantum_info` is in general more performant when multiplying Pauli sums."
    ],
    "metadata": {}
   },
@@ -665,7 +672,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "0.37993166954125124"
+      "text/plain": "1.5267988486566966"
      },
      "metadata": {},
      "execution_count": 25
@@ -677,12 +684,36 @@
     "\n",
     "(xj, yj, xp, yp) = get_julia_python_sums(n_qubits, n_terms)\n",
     "julia_time = @belapsed $xj * $xj\n",
-    "qiskit_time = @belapsed $xp.compose($yp)\n",
+    "qiskit_time = @belapsed $xp.compose($yp).simplify()\n",
     "\n",
     "qiskit_time / julia_time"
    ],
    "metadata": {},
    "execution_count": 25
+  },
+  {
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "0.7170566951089946"
+     },
+     "metadata": {},
+     "execution_count": 26
+    }
+   ],
+   "cell_type": "code",
+   "source": [
+    "n_qubits = 10; n_terms = 2000\n",
+    "\n",
+    "(xj, yj, xp, yp) = get_julia_python_sums(n_qubits, n_terms)\n",
+    "julia_time = @elapsed xj * xj\n",
+    "qiskit_time = @elapsed xp.compose(yp).simplify()\n",
+    "\n",
+    "qiskit_time / julia_time"
+   ],
+   "metadata": {},
+   "execution_count": 26
   },
   {
    "cell_type": "markdown",
@@ -698,10 +729,10 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "16x2 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{ComplexF64}}:\nII * (0.4400937880748499 + 0.0im)\nIX * (0.3992930553563667 + 0.0im)\nIY * (0.0 + 0.028154888263062394im)\nIZ * (0.1435929884762503 + 0.0im)\nXI * (0.6444740283744304 + 0.0im)\nXX * (0.6084277894956611 + 0.0im)\nXY * (0.0 + 0.08352265712990495im)\nXZ * (0.07305389769568146 + 0.0im)\nYI * (0.0 + 0.06619468977071183im)\nYX * (0.0 - 0.10488866605191027im)\nYY * (0.17155774260054096 - 0.0im)\nYZ * (0.0 - 0.23854745459105056im)\nZI * (0.08788089814342753 + 0.0im)\nZX * (0.025165089620972247 + 0.0im)\nZY * (0.0 + 0.3946254191445371im)\nZZ * (-0.07156041498587723 + 0.0im)"
+      "text/plain": "16x2 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{ComplexF64}}:\nII * (0.6728683981162644 + 0.0im)\nIX * (0.5974401687186259 + 0.0im)\nIY * (0.0 + 0.18961743797229705im)\nIZ * (0.1145047782842748 + 0.0im)\nXI * (0.503257552132207 + 0.0im)\nXX * (0.6859292081506199 + 0.0im)\nXY * (0.0 + 0.1704613295031609im)\nXZ * (0.12491715435829631 + 0.0im)\nYI * (0.0 + 0.20205199272117202im)\nYX * (0.0 + 0.15963881745909278im)\nYY * (0.05841606051018508 - 0.0im)\nYZ * (0.0 + 0.15118525284711246im)\nZI * (-0.0725133327708439 + 0.0im)\nZX * (0.010803937328971447 + 0.0im)\nZY * (0.0 + 0.19515795476503608im)\nZZ * (0.26331839884321784 + 0.0im)"
      },
      "metadata": {},
-     "execution_count": 26
+     "execution_count": 27
     }
    ],
    "cell_type": "code",
@@ -710,7 +741,7 @@
     "s = PauliSum(m)"
    ],
    "metadata": {},
-   "execution_count": 26
+   "execution_count": 27
   },
   {
    "cell_type": "markdown",
@@ -727,7 +758,7 @@
       "text/plain": "true"
      },
      "metadata": {},
-     "execution_count": 27
+     "execution_count": 28
     }
    ],
    "cell_type": "code",
@@ -735,7 +766,7 @@
     "m ≈ Matrix(s)"
    ],
    "metadata": {},
-   "execution_count": 27
+   "execution_count": 28
   },
   {
    "cell_type": "markdown",
@@ -749,10 +780,10 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "0.082307376"
+      "text/plain": "0.081919077"
      },
      "metadata": {},
-     "execution_count": 28
+     "execution_count": 29
     }
    ],
    "cell_type": "code",
@@ -762,26 +793,17 @@
     "julia_time = @belapsed PauliSum($m)"
    ],
    "metadata": {},
-   "execution_count": 28
+   "execution_count": 29
   },
   {
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "┌ Warning: `vendor()` is deprecated, use `BLAS.get_config()` and inspect the output instead\n",
-      "│   caller = npyinitialize() at numpy.jl:67\n",
-      "└ @ PyCall ~/.julia/packages/PyCall/3fwVL/src/numpy.jl:67\n"
-     ]
-    },
-    {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "8.954068324"
+      "text/plain": "8.798214254"
      },
      "metadata": {},
-     "execution_count": 29
+     "execution_count": 30
     }
    ],
    "cell_type": "code",
@@ -790,7 +812,7 @@
     "qi_time = @elapsed qi.SparsePauliOp.from_operator(qi_op)"
    ],
    "metadata": {},
-   "execution_count": 29
+   "execution_count": 30
   },
   {
    "cell_type": "markdown",
@@ -804,10 +826,10 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "108.78816406442114"
+      "text/plain": "107.40128644271711"
      },
      "metadata": {},
-     "execution_count": 30
+     "execution_count": 31
     }
    ],
    "cell_type": "code",
@@ -815,7 +837,7 @@
     "qi_time / julia_time"
    ],
    "metadata": {},
-   "execution_count": 30
+   "execution_count": 31
   },
   {
    "cell_type": "markdown",
@@ -841,31 +863,13 @@
       "text/plain": "(+i XXY, QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, QuantumOps.Z4Groups.Z4Group})"
      },
      "metadata": {},
-     "execution_count": 31
+     "execution_count": 32
     }
    ],
    "cell_type": "code",
    "source": [
     "t = PauliTerm(:XXY, Z4Group(im))\n",
     "(t, typeof(t))"
-   ],
-   "metadata": {},
-   "execution_count": 31
-  },
-  {
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "+1 ZXZ"
-     },
-     "metadata": {},
-     "execution_count": 32
-    }
-   ],
-   "cell_type": "code",
-   "source": [
-    "v = PauliTerm(:ZXZ, Z4Group(1))"
    ],
    "metadata": {},
    "execution_count": 32
@@ -875,7 +879,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "+i YIX"
+      "text/plain": "+1 ZXZ"
      },
      "metadata": {},
      "execution_count": 33
@@ -883,10 +887,28 @@
    ],
    "cell_type": "code",
    "source": [
-    "t * v"
+    "v = PauliTerm(:ZXZ, Z4Group(1))"
    ],
    "metadata": {},
    "execution_count": 33
+  },
+  {
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "+i YIX"
+     },
+     "metadata": {},
+     "execution_count": 34
+    }
+   ],
+   "cell_type": "code",
+   "source": [
+    "t * v"
+   ],
+   "metadata": {},
+   "execution_count": 34
   },
   {
    "cell_type": "markdown",
@@ -916,7 +938,7 @@
     "dump(Z4Group0(1))"
    ],
    "metadata": {},
-   "execution_count": 34
+   "execution_count": 35
   },
   {
    "cell_type": "markdown",
@@ -930,10 +952,10 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "3×5 Matrix{QuantumOps.Z4Group0s.Z4Group0}:\n -i  0   +1  -i  -i\n +1  -i  0   0   +1\n +1  -i  -i  +i  0"
+      "text/plain": "3×5 Matrix{QuantumOps.Z4Group0s.Z4Group0}:\n +1  -1  0   +i  -i\n -1  +1  -i  -i  +1\n -i  -1  +i  -i  -i"
      },
      "metadata": {},
-     "execution_count": 35
+     "execution_count": 36
     }
    ],
    "cell_type": "code",
@@ -942,7 +964,7 @@
     "a"
    ],
    "metadata": {},
-   "execution_count": 35
+   "execution_count": 36
   },
   {
    "outputs": [
@@ -952,7 +974,7 @@
       "text/plain": "45"
      },
      "metadata": {},
-     "execution_count": 36
+     "execution_count": 37
     }
    ],
    "cell_type": "code",
@@ -960,7 +982,7 @@
     "sizeof(a)  ## (3 x 5) x 3 bytes"
    ],
    "metadata": {},
-   "execution_count": 36
+   "execution_count": 37
   },
   {
    "cell_type": "markdown",
@@ -975,7 +997,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  64.256 μs (1 allocation: 16 bytes)\n"
+      "  64.116 μs (1 allocation: 16 bytes)\n"
      ]
     },
     {
@@ -984,7 +1006,7 @@
       "text/plain": "0"
      },
      "metadata": {},
-     "execution_count": 37
+     "execution_count": 38
     }
    ],
    "cell_type": "code",
@@ -993,7 +1015,7 @@
     "@btime reduce(*, a)"
    ],
    "metadata": {},
-   "execution_count": 37
+   "execution_count": 38
   },
   {
    "outputs": [
@@ -1001,7 +1023,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  132.633 μs (1 allocation: 32 bytes)\n"
+      "  132.563 μs (1 allocation: 32 bytes)\n"
      ]
     },
     {
@@ -1010,7 +1032,7 @@
       "text/plain": "0 + 0im"
      },
      "metadata": {},
-     "execution_count": 38
+     "execution_count": 39
     }
    ],
    "cell_type": "code",
@@ -1019,7 +1041,7 @@
     "@btime reduce(*, anum)"
    ],
    "metadata": {},
-   "execution_count": 38
+   "execution_count": 39
   },
   {
    "cell_type": "markdown",
@@ -1036,7 +1058,7 @@
       "text/plain": "8×8 Matrix{QuantumOps.Z4Group0s.Z4Group0}:\n 0   0   0   0   0   0   -i  0\n 0   0   0   0   0   0   0   +i\n 0   0   0   0   +i  0   0   0\n 0   0   0   0   0   -i  0   0\n 0   0   -i  0   0   0   0   0\n 0   0   0   +i  0   0   0   0\n +i  0   0   0   0   0   0   0\n 0   -i  0   0   0   0   0   0"
      },
      "metadata": {},
-     "execution_count": 39
+     "execution_count": 40
     }
    ],
    "cell_type": "code",
@@ -1044,7 +1066,7 @@
     "kron([Z4Group0.(m) for m in Matrix.([X, Y, Z])]...)"
    ],
    "metadata": {},
-   "execution_count": 39
+   "execution_count": 40
   },
   {
    "outputs": [
@@ -1052,7 +1074,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ZZZI"
+      "YYII"
      ]
     }
    ],
@@ -1062,7 +1084,7 @@
     "print(operators)"
    ],
    "metadata": {},
-   "execution_count": 40
+   "execution_count": 41
   },
   {
    "outputs": [
@@ -1072,7 +1094,7 @@
       "text/plain": "(16, 16)"
      },
      "metadata": {},
-     "execution_count": 41
+     "execution_count": 42
     }
    ],
    "cell_type": "code",
@@ -1083,23 +1105,6 @@
     "size(kron(mats...))"
    ],
    "metadata": {},
-   "execution_count": 41
-  },
-  {
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  628.182 ns (3 allocations: 2.88 KiB)\n"
-     ]
-    }
-   ],
-   "cell_type": "code",
-   "source": [
-    "@btime kron($mats...);"
-   ],
-   "metadata": {},
    "execution_count": 42
   },
   {
@@ -1108,7 +1113,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  691.899 ns (3 allocations: 1.12 KiB)\n"
+      "  750.646 ns (3 allocations: 5.52 KiB)\n"
+     ]
+    }
+   ],
+   "cell_type": "code",
+   "source": [
+    "@btime kron($mats...);"
+   ],
+   "metadata": {},
+   "execution_count": 43
+  },
+  {
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  675.608 ns (3 allocations: 1.12 KiB)\n"
      ]
     }
    ],
@@ -1117,7 +1139,7 @@
     "@btime kron($z40mats...);"
    ],
    "metadata": {},
-   "execution_count": 43
+   "execution_count": 44
   },
   {
    "cell_type": "markdown",
@@ -1141,7 +1163,7 @@
       "text/plain": "(PyObject x, PyObject t)"
      },
      "metadata": {},
-     "execution_count": 44
+     "execution_count": 45
     }
    ],
    "cell_type": "code",
@@ -1150,7 +1172,7 @@
     "(x, t) = sympy.symbols(\"x t\")"
    ],
    "metadata": {},
-   "execution_count": 44
+   "execution_count": 45
   },
   {
    "cell_type": "markdown",
@@ -1167,7 +1189,7 @@
       "text/plain": "4-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, PyObject}:\nXXYZ * (PyObject t + x)"
      },
      "metadata": {},
-     "execution_count": 45
+     "execution_count": 46
     }
    ],
    "cell_type": "code",
@@ -1175,7 +1197,7 @@
     "term = PauliTerm(\"XXYZ\", x + t)"
    ],
    "metadata": {},
-   "execution_count": 45
+   "execution_count": 46
   },
   {
    "outputs": [
@@ -1185,7 +1207,7 @@
       "text/plain": "4-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, PyObject}:\nXXYZ * (PyObject (t + x)**3)"
      },
      "metadata": {},
-     "execution_count": 46
+     "execution_count": 47
     }
    ],
    "cell_type": "code",
@@ -1193,7 +1215,7 @@
     "term^3"
    ],
    "metadata": {},
-   "execution_count": 46
+   "execution_count": 47
   },
   {
    "cell_type": "markdown",
@@ -1210,7 +1232,7 @@
       "text/plain": "PauliTerm{Vector{Pauli}, PyObject} (alias for QuantumOps.OpTerm{QuantumOps.Paulis.Pauli, Array{QuantumOps.Paulis.Pauli, 1}, PyObject})"
      },
      "metadata": {},
-     "execution_count": 47
+     "execution_count": 48
     }
    ],
    "cell_type": "code",
@@ -1218,7 +1240,7 @@
     "typeof(term)"
    ],
    "metadata": {},
-   "execution_count": 47
+   "execution_count": 48
   },
   {
    "cell_type": "markdown",
