--- a/notebooks/quantum_ops_performance_demo.ipynb
+++ b/notebooks/quantum_ops_performance_demo.ipynb
@@ -158,7 +158,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  1.815 ns (0 allocations: 0 bytes)\n"
+      "  1.816 ns (0 allocations: 0 bytes)\n"
      ]
     }
    ],
@@ -176,7 +176,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.977 ns (0 allocations: 0 bytes)\n"
+      "  1.396 ns (0 allocations: 0 bytes)\n"
      ]
     }
    ],
@@ -208,7 +208,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  30.705 ns (1 allocation: 128 bytes)\n"
+      "  31.619 ns (1 allocation: 128 bytes)\n"
      ]
     }
    ],
@@ -227,7 +227,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  167.752 ns (1 allocation: 128 bytes)\n"
+      "  171.371 ns (1 allocation: 128 bytes)\n"
      ]
     }
    ],
@@ -251,7 +251,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  19.615 ns (1 allocation: 80 bytes)\n"
+      "  20.455 ns (1 allocation: 80 bytes)\n"
      ]
     },
     {
@@ -316,13 +316,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  44.208 ns (1 allocation: 80 bytes)\n"
+      "  50.930 ns (1 allocation: 80 bytes)\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Complex{Int64}}:\nIZYIYXYYZY * (0 - 1im)"
+      "text/plain": "10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Complex{Int64}}:\nIIZYIZYXZX * (1 + 0im)"
      },
      "metadata": {},
      "execution_count": 12
@@ -353,13 +353,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  16.763 μs (4 allocations: 256 bytes)\n"
+      "  17.601 μs (4 allocations: 256 bytes)\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "PyObject Pauli('-iXIXYIYYZIX')"
+      "text/plain": "PyObject Pauli('-iIZIZYZXIXI')"
      },
      "metadata": {},
      "execution_count": 13
@@ -385,7 +385,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "332.7671894803549"
+      "text/plain": "347.37228190718264"
      },
      "metadata": {},
      "execution_count": 14
@@ -413,7 +413,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "10.03516704345642"
+      "text/plain": "9.98148347507805"
      },
      "metadata": {},
      "execution_count": 15
@@ -444,7 +444,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "1.906648212666444"
+      "text/plain": "1.8758188283735726"
      },
      "metadata": {},
      "execution_count": 16
@@ -482,7 +482,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "10x10 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{Float64}}:\nIIZYZYYIZI * 1.5254663812180342\nIXXIZXYIZI * 0.4286680995053579\nIXZIYZZIZX * -0.34347870392147345\nXIYXIYZYZZ * -0.6634850219738598\nXXXXXZIZIZ * 0.19516859159317054\nYXXXXIXXXZ * -0.9239711330827733\nYXYYXIYIZX * 0.9194225727736794\nYYIYZIXXIY * -0.852316077397016\nYYZZZXZYZX * 2.5773315767877314\nYZIZYXYZZZ * -0.0571125686419795"
+      "text/plain": "10x10 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{Float64}}:\nIIXYIZIXYI * 2.2215889323336255\nIYXXYYYYXZ * -0.38178817654468283\nXXYYIZXYXZ * -2.039460991887577\nYIXIYIZZZZ * -0.5751862981192438\nYIYIXZYXYI * -0.18654955526856118\nYIZYXZXYZI * 0.5093119169845572\nYZZIZXYIXY * 1.0572243529904528\nZIXIZIZIZX * -0.6712398494276668\nZXZIIIIYIY * -0.6472150447189541\nZYIZYZXZXX * -0.2459676130460791"
      },
      "metadata": {},
      "execution_count": 17
@@ -502,7 +502,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "(10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64}:\nXXXXXZIZIZ * 0.19516859159317054, QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64})"
+      "text/plain": "(10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64}:\nYIYIXZYXYI * -0.18654955526856118, QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64})"
      },
      "metadata": {},
      "execution_count": 18
@@ -528,7 +528,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "9x10 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{Float64}}:\nIIZYZYYIZI * 1.5254663812180342\nIXXIZXYIZI * 0.4286680995053579\nIXZIYZZIZX * -0.34347870392147345\nXIYXIYZYZZ * -0.6634850219738598\nYXXXXIXXXZ * -0.9239711330827733\nYXYYXIYIZX * 0.9194225727736794\nYYIYZIXXIY * -0.852316077397016\nYYZZZXZYZX * 2.5773315767877314\nYZIZYXYZZZ * -0.0571125686419795"
+      "text/plain": "9x10 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{Float64}}:\nIIXYIZIXYI * 2.2215889323336255\nIYXXYYYYXZ * -0.38178817654468283\nXXYYIZXYXZ * -2.039460991887577\nYIXIYIZZZZ * -0.5751862981192438\nYIZYXZXYZI * 0.5093119169845572\nYZZIZXYIXY * 1.0572243529904528\nZIXIZIZIZX * -0.6712398494276668\nZXZIIIIYIY * -0.6472150447189541\nZYIZYZXZXX * -0.2459676130460791"
      },
      "metadata": {},
      "execution_count": 19
@@ -592,7 +592,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64}:\nIIXYZIYZZY * 0.17270848040900558"
+      "text/plain": "10-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, Float64}:\nIYZYZYYYIX * -1.7648300362371168"
      },
      "metadata": {},
      "execution_count": 22
@@ -611,7 +611,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  60.579 ns (0 allocations: 0 bytes)\n"
+      "  62.289 ns (0 allocations: 0 bytes)\n"
      ]
     }
    ],
@@ -639,7 +639,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "`qiskit.quantum_info` is in general more performant when multiplying Pauli sums."
+    "`qiskit.quantum_info` and `QuantumOps` are comparable in performance when multiplying Pauli sums;\n",
+    " at least over some range of parameters."
    ],
    "metadata": {}
   },
@@ -672,7 +673,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "1.5267988486566966"
+      "text/plain": "1.5243537575018375"
      },
      "metadata": {},
      "execution_count": 25
@@ -696,7 +697,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "0.7170566951089946"
+      "text/plain": "0.7094303082828785"
      },
      "metadata": {},
      "execution_count": 26
@@ -716,6 +717,30 @@
    "execution_count": 26
   },
   {
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "1.0960905393336948"
+     },
+     "metadata": {},
+     "execution_count": 27
+    }
+   ],
+   "cell_type": "code",
+   "source": [
+    "n_qubits = 100; n_terms = 2000\n",
+    "\n",
+    "(xj, yj, xp, yp) = get_julia_python_sums(n_qubits, n_terms)\n",
+    "julia_time = @elapsed xj * xj\n",
+    "qiskit_time = @elapsed xp.compose(yp).simplify()\n",
+    "\n",
+    "qiskit_time / julia_time"
+   ],
+   "metadata": {},
+   "execution_count": 27
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "#### Pauli decomposition\n",
@@ -729,10 +754,10 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "16x2 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{ComplexF64}}:\nII * (0.6728683981162644 + 0.0im)\nIX * (0.5974401687186259 + 0.0im)\nIY * (0.0 + 0.18961743797229705im)\nIZ * (0.1145047782842748 + 0.0im)\nXI * (0.503257552132207 + 0.0im)\nXX * (0.6859292081506199 + 0.0im)\nXY * (0.0 + 0.1704613295031609im)\nXZ * (0.12491715435829631 + 0.0im)\nYI * (0.0 + 0.20205199272117202im)\nYX * (0.0 + 0.15963881745909278im)\nYY * (0.05841606051018508 - 0.0im)\nYZ * (0.0 + 0.15118525284711246im)\nZI * (-0.0725133327708439 + 0.0im)\nZX * (0.010803937328971447 + 0.0im)\nZY * (0.0 + 0.19515795476503608im)\nZZ * (0.26331839884321784 + 0.0im)"
+      "text/plain": "16x2 QuantumOps.PauliSum{Vector{Vector{QuantumOps.Paulis.Pauli}}, Vector{ComplexF64}}:\nII * (0.5325669617541431 + 0.0im)\nIX * (0.5253614216617813 + 0.0im)\nIY * (0.0 + 0.10933946239343692im)\nIZ * (0.015554511633424084 + 0.0im)\nXI * (0.45449561970641994 + 0.0im)\nXX * (0.6144901597409341 + 0.0im)\nXY * (0.0 + 0.016330712415224602im)\nXZ * (-0.2643962976623996 + 0.0im)\nYI * (0.0 - 0.010222264989617286im)\nYX * (0.0 + 0.19305786849392814im)\nYY * (0.06352046792495009 - 0.0im)\nYZ * (0.0 - 0.1528041759924518im)\nZI * (-0.21995259594969138 + 0.0im)\nZX * (0.12543905855302873 + 0.0im)\nZY * (0.0 - 0.24778086294104326im)\nZZ * (0.207191456659944 + 0.0im)"
      },
      "metadata": {},
-     "execution_count": 27
+     "execution_count": 28
     }
    ],
    "cell_type": "code",
@@ -741,7 +766,7 @@
     "s = PauliSum(m)"
    ],
    "metadata": {},
-   "execution_count": 27
+   "execution_count": 28
   },
   {
    "cell_type": "markdown",
@@ -758,7 +783,7 @@
       "text/plain": "true"
      },
      "metadata": {},
-     "execution_count": 28
+     "execution_count": 29
     }
    ],
    "cell_type": "code",
@@ -766,7 +791,7 @@
     "m ≈ Matrix(s)"
    ],
    "metadata": {},
-   "execution_count": 28
+   "execution_count": 29
   },
   {
    "cell_type": "markdown",
@@ -780,10 +805,10 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "0.081919077"
+      "text/plain": "0.082640008"
      },
      "metadata": {},
-     "execution_count": 29
+     "execution_count": 30
     }
    ],
    "cell_type": "code",
@@ -793,17 +818,17 @@
     "julia_time = @belapsed PauliSum($m)"
    ],
    "metadata": {},
-   "execution_count": 29
+   "execution_count": 30
   },
   {
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "8.798214254"
+      "text/plain": "8.774843299"
      },
      "metadata": {},
-     "execution_count": 30
+     "execution_count": 31
     }
    ],
    "cell_type": "code",
@@ -812,7 +837,7 @@
     "qi_time = @elapsed qi.SparsePauliOp.from_operator(qi_op)"
    ],
    "metadata": {},
-   "execution_count": 30
+   "execution_count": 31
   },
   {
    "cell_type": "markdown",
@@ -826,10 +851,10 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "107.40128644271711"
+      "text/plain": "106.18153980575607"
      },
      "metadata": {},
-     "execution_count": 31
+     "execution_count": 32
     }
    ],
    "cell_type": "code",
@@ -837,7 +862,7 @@
     "qi_time / julia_time"
    ],
    "metadata": {},
-   "execution_count": 31
+   "execution_count": 32
   },
   {
    "cell_type": "markdown",
@@ -863,31 +888,13 @@
       "text/plain": "(+i XXY, QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, QuantumOps.Z4Groups.Z4Group})"
      },
      "metadata": {},
-     "execution_count": 32
+     "execution_count": 33
     }
    ],
    "cell_type": "code",
    "source": [
     "t = PauliTerm(:XXY, Z4Group(im))\n",
     "(t, typeof(t))"
-   ],
-   "metadata": {},
-   "execution_count": 32
-  },
-  {
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "+1 ZXZ"
-     },
-     "metadata": {},
-     "execution_count": 33
-    }
-   ],
-   "cell_type": "code",
-   "source": [
-    "v = PauliTerm(:ZXZ, Z4Group(1))"
    ],
    "metadata": {},
    "execution_count": 33
@@ -897,7 +904,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "+i YIX"
+      "text/plain": "+1 ZXZ"
      },
      "metadata": {},
      "execution_count": 34
@@ -905,10 +912,28 @@
    ],
    "cell_type": "code",
    "source": [
-    "t * v"
+    "v = PauliTerm(:ZXZ, Z4Group(1))"
    ],
    "metadata": {},
    "execution_count": 34
+  },
+  {
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "+i YIX"
+     },
+     "metadata": {},
+     "execution_count": 35
+    }
+   ],
+   "cell_type": "code",
+   "source": [
+    "t * v"
+   ],
+   "metadata": {},
+   "execution_count": 35
   },
   {
    "cell_type": "markdown",
@@ -938,7 +963,7 @@
     "dump(Z4Group0(1))"
    ],
    "metadata": {},
-   "execution_count": 35
+   "execution_count": 36
   },
   {
    "cell_type": "markdown",
@@ -952,10 +977,10 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "3×5 Matrix{QuantumOps.Z4Group0s.Z4Group0}:\n +1  -1  0   +i  -i\n -1  +1  -i  -i  +1\n -i  -1  +i  -i  -i"
+      "text/plain": "3×5 Matrix{QuantumOps.Z4Group0s.Z4Group0}:\n -i  0   0   -1  -1\n +1  +i  +i  0   +i\n +1  0   0   +1  -1"
      },
      "metadata": {},
-     "execution_count": 36
+     "execution_count": 37
     }
    ],
    "cell_type": "code",
@@ -964,7 +989,7 @@
     "a"
    ],
    "metadata": {},
-   "execution_count": 36
+   "execution_count": 37
   },
   {
    "outputs": [
@@ -974,7 +999,7 @@
       "text/plain": "45"
      },
      "metadata": {},
-     "execution_count": 37
+     "execution_count": 38
     }
    ],
    "cell_type": "code",
@@ -982,7 +1007,7 @@
     "sizeof(a)  ## (3 x 5) x 3 bytes"
    ],
    "metadata": {},
-   "execution_count": 37
+   "execution_count": 38
   },
   {
    "cell_type": "markdown",
@@ -997,7 +1022,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  64.116 μs (1 allocation: 16 bytes)\n"
+      "  64.255 μs (1 allocation: 16 bytes)\n"
      ]
     },
     {
@@ -1006,7 +1031,7 @@
       "text/plain": "0"
      },
      "metadata": {},
-     "execution_count": 38
+     "execution_count": 39
     }
    ],
    "cell_type": "code",
@@ -1015,7 +1040,7 @@
     "@btime reduce(*, a)"
    ],
    "metadata": {},
-   "execution_count": 38
+   "execution_count": 39
   },
   {
    "outputs": [
@@ -1023,7 +1048,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  132.563 μs (1 allocation: 32 bytes)\n"
+      "  131.234 μs (1 allocation: 32 bytes)\n"
      ]
     },
     {
@@ -1032,7 +1057,7 @@
       "text/plain": "0 + 0im"
      },
      "metadata": {},
-     "execution_count": 39
+     "execution_count": 40
     }
    ],
    "cell_type": "code",
@@ -1041,7 +1066,7 @@
     "@btime reduce(*, anum)"
    ],
    "metadata": {},
-   "execution_count": 39
+   "execution_count": 40
   },
   {
    "cell_type": "markdown",
@@ -1058,7 +1083,7 @@
       "text/plain": "8×8 Matrix{QuantumOps.Z4Group0s.Z4Group0}:\n 0   0   0   0   0   0   -i  0\n 0   0   0   0   0   0   0   +i\n 0   0   0   0   +i  0   0   0\n 0   0   0   0   0   -i  0   0\n 0   0   -i  0   0   0   0   0\n 0   0   0   +i  0   0   0   0\n +i  0   0   0   0   0   0   0\n 0   -i  0   0   0   0   0   0"
      },
      "metadata": {},
-     "execution_count": 40
+     "execution_count": 41
     }
    ],
    "cell_type": "code",
@@ -1066,7 +1091,7 @@
     "kron([Z4Group0.(m) for m in Matrix.([X, Y, Z])]...)"
    ],
    "metadata": {},
-   "execution_count": 40
+   "execution_count": 41
   },
   {
    "outputs": [
@@ -1074,7 +1099,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "YYII"
+      "YXZX"
      ]
     }
    ],
@@ -1084,7 +1109,7 @@
     "print(operators)"
    ],
    "metadata": {},
-   "execution_count": 41
+   "execution_count": 42
   },
   {
    "outputs": [
@@ -1094,7 +1119,7 @@
       "text/plain": "(16, 16)"
      },
      "metadata": {},
-     "execution_count": 42
+     "execution_count": 43
     }
    ],
    "cell_type": "code",
@@ -1105,23 +1130,6 @@
     "size(kron(mats...))"
    ],
    "metadata": {},
-   "execution_count": 42
-  },
-  {
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  750.646 ns (3 allocations: 5.52 KiB)\n"
-     ]
-    }
-   ],
-   "cell_type": "code",
-   "source": [
-    "@btime kron($mats...);"
-   ],
-   "metadata": {},
    "execution_count": 43
   },
   {
@@ -1130,7 +1138,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  675.608 ns (3 allocations: 1.12 KiB)\n"
+      "  729.892 ns (3 allocations: 5.52 KiB)\n"
+     ]
+    }
+   ],
+   "cell_type": "code",
+   "source": [
+    "@btime kron($mats...);"
+   ],
+   "metadata": {},
+   "execution_count": 44
+  },
+  {
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  669.594 ns (3 allocations: 1.12 KiB)\n"
      ]
     }
    ],
@@ -1139,7 +1164,7 @@
     "@btime kron($z40mats...);"
    ],
    "metadata": {},
-   "execution_count": 44
+   "execution_count": 45
   },
   {
    "cell_type": "markdown",
@@ -1163,7 +1188,7 @@
       "text/plain": "(PyObject x, PyObject t)"
      },
      "metadata": {},
-     "execution_count": 45
+     "execution_count": 46
     }
    ],
    "cell_type": "code",
@@ -1172,7 +1197,7 @@
     "(x, t) = sympy.symbols(\"x t\")"
    ],
    "metadata": {},
-   "execution_count": 45
+   "execution_count": 46
   },
   {
    "cell_type": "markdown",
@@ -1189,7 +1214,7 @@
       "text/plain": "4-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, PyObject}:\nXXYZ * (PyObject t + x)"
      },
      "metadata": {},
-     "execution_count": 46
+     "execution_count": 47
     }
    ],
    "cell_type": "code",
@@ -1197,7 +1222,7 @@
     "term = PauliTerm(\"XXYZ\", x + t)"
    ],
    "metadata": {},
-   "execution_count": 46
+   "execution_count": 47
   },
   {
    "outputs": [
@@ -1207,7 +1232,7 @@
       "text/plain": "4-factor QuantumOps.PauliTerm{Vector{QuantumOps.Paulis.Pauli}, PyObject}:\nXXYZ * (PyObject (t + x)**3)"
      },
      "metadata": {},
-     "execution_count": 47
+     "execution_count": 48
     }
    ],
    "cell_type": "code",
@@ -1215,7 +1240,7 @@
     "term^3"
    ],
    "metadata": {},
-   "execution_count": 47
+   "execution_count": 48
   },
   {
    "cell_type": "markdown",
@@ -1232,7 +1257,7 @@
       "text/plain": "PauliTerm{Vector{Pauli}, PyObject} (alias for QuantumOps.OpTerm{QuantumOps.Paulis.Pauli, Array{QuantumOps.Paulis.Pauli, 1}, PyObject})"
      },
      "metadata": {},
-     "execution_count": 48
+     "execution_count": 49
     }
    ],
    "cell_type": "code",
@@ -1240,7 +1265,7 @@
     "typeof(term)"
    ],
    "metadata": {},
-   "execution_count": 48
+   "execution_count": 49
   },
   {
    "cell_type": "markdown",
